<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" > 
     
        <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        android:layout_toLeftOf="@+id/RelativeLayout3"
        android:layout_alignParentLeft="true"
        >
       <!--第一个板块  -->
        <RelativeLayout
        android:id="@+id/RelativeLayout11" 
        android:layout_width="wrap_content" 
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@color/cadetblue">
        <TextView
        android:id="@+id/one1"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"     
        android:padding="@dimen/padding_medium"
        android:text="@string/first_one1"
         />
        <TextView
        android:id="@+id/two1"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/one1" 
        android:padding="@dimen/padding_medium"
        android:text="@string/first_one2"
         />
        <TextView
        android:id="@+id/three1"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/two1" 
        android:layout_alignRight="@+id/RelativeLayout11"    
        android:padding="@dimen/padding_medium"
        android:text="@string/first_one3"
         />
        <TextView
        android:id="@+id/four1"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_below="@+id/three1"
        android:layout_alignRight="@+id/RelativeLayout11"
        android:layout_alignBottom="@+id/RelativeLayout11"    
        android:padding="@dimen/padding_medium"
        android:text="@string/first_one4"
         />
        </RelativeLayout>
        <!--第二个板块  -->
       <RelativeLayout
        android:id="@+id/RelativeLayout21"
        android:layout_width="wrap_content"       
        android:layout_height="fill_parent"
        android:layout_weight="1" 
        android:background="@color/antiquewhite">
        <TextView
        android:id="@+id/one2"   
        android:layout_width="wrap_content"       
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/RelativeLayout21"
        android:padding="@dimen/padding_medium"
        android:text="@string/second_one"
         /> 
          <TextView
        android:id="@+id/two2"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/one2" 
        android:padding="@dimen/padding_medium"
        android:text="@string/second_one"
         />
        <TextView
        android:id="@+id/three2"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/two2" 
        android:layout_alignRight="@+id/RelativeLayout21"    
        android:padding="@dimen/padding_medium"
        android:text="@string/second_one"
         />   
        </RelativeLayout>
         </LinearLayout>
        
         <!--第三个板块  -->
        <RelativeLayout
        android:id="@+id/RelativeLayout3"
        android:layout_width="wrap_content"  
        android:layout_height="fill_parent" 
        android:layout_toRightOf="@+id/LinearLayout1" 
        android:layout_alignParentRight="true"
        android:background="@color/aqua"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"  
        android:text="@string/three_one"/>
        </RelativeLayout>
</RelativeLayout>